Ensure the navbar are completely hidden on smaller screens

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -77,28 +77,6 @@ nav {
   transition: transform 0.3s ease-in-out;
 }
 
-#menu-links {
-  display: none;
-  flex-direction: column;
-  padding: 10px;
-  text-align: center;
-  background-color: #f9f0df;
-  position: absolute;
-  top: 70px;
-  left: 0;
-  right: 0;
-  border-radius: 5px;
-  transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
-  opacity: 0;
-  transform: translateY(-20px);
-}
-
-#menu-links.active {
-  display: flex;
-  opacity: 1;
-  transform: translateY(0);
-}
-
 .nav-links li {
   margin-right: 20px;
   margin-left: 20px;
@@ -172,6 +150,29 @@ nav {
     border: 1px solid black;
   }
 
+  #menu-links {
+    display: none;
+    flex-direction: column;
+    padding: 10px;
+    text-align: center;
+    background-color: #f9f0df;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+    border-radius: 5px;
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  #menu-links.active {
+    display: flex;
+    opacity: 1;
+    padding-top: 24px;
+    transform: translateY(0);
+  }
+
   .nav-links.active,
   .checkbox:checked ~ .nav-links {
     margin-top: -15px;
@@ -221,12 +222,6 @@ nav {
   .hamburger-lines .line3 {
     transform-origin: 0% 100%;
     transition: transform 0.4s ease-in-out;
-  }
-
-  #menu-links.active {
-    padding-top: 24px;
-    opacity: 1;
-    transform: translateY(0);
   }
 
   .checkbox {
